tests/macro-tests/cases/property/prefix_is_default.stderr
error[E0277]: the trait bound `ArcVar<bool>: IntoVar<u32>` is not satisfied
  --> cases/property/prefix_is_default.rs:10:52
   |
9  | #[property(CONTEXT)]
   | -------------------- required by a bound introduced by this call
10 | pub fn is_state_invalid(child: impl UiNode, state: impl IntoVar<u32>) -> impl UiNode {
   |                                                    ^^^^ the trait `IntoVar<u32>` is not implemented for `ArcVar<bool>`
   |
   = note: `IntoVar<T>` is implemented for all `T: VarValue`
   = note: `IntoVar<T>` is implemented for all `V: Var<T>`
   = help: the trait `IntoVar<bool>` is implemented for `ArcVar<bool>`
   = help: for that trait implementation, expected `bool`, found `u32`
note: required by a bound in `is_state_invalid_::args`
  --> cases/property/prefix_is_default.rs:10:57
   |
9  | #[property(CONTEXT)]
   | -------------------- required by a bound in this associated function
10 | pub fn is_state_invalid(child: impl UiNode, state: impl IntoVar<u32>) -> impl UiNode {
   |                                                         ^^^^^^^^^^^^ required by this bound in `is_state_invalid_::args`
